[gd_scene load_steps=47 format=3 uid="uid://cc7s342phxl7g"]

[ext_resource type="Texture2D" uid="uid://bpc1n56jw0rq4" path="res://Sprite/QuizSprite/Buttons updated 2.png" id="1_dd30v"]
[ext_resource type="Texture2D" uid="uid://vvrtekt011" path="res://Sprite/QuizSprite/Quiz border (Updated).png" id="1_l0id6"]
[ext_resource type="Script" path="res://Scene/Script/QuizScript/quiz.gd" id="1_trnum"]
[ext_resource type="Texture2D" uid="uid://c10q24elr5x68" path="res://Sprite/QuizSprite/Quix button hover.png" id="3_0rsgw"]
[ext_resource type="Texture2D" uid="uid://vwx8gjy0m1bm" path="res://Sprite/QuizSprite/Complete quiz.png" id="5_hctmh"]
[ext_resource type="Texture2D" uid="uid://irrwqavb1gbu" path="res://Sprite/QuizSprite/Try again updated 2 (1).png" id="6_tfa6f"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x527l"]
atlas = ExtResource("1_l0id6")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l74fb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_glglt"]
atlas = ExtResource("3_0rsgw")
region = Rect2(151, 72, 181, 52)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bghpr"]
texture = SubResource("AtlasTexture_glglt")

[sub_resource type="AtlasTexture" id="AtlasTexture_1xjf2"]
atlas = ExtResource("3_0rsgw")
region = Rect2(151, 72, 181, 52)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xxorb"]
texture = SubResource("AtlasTexture_1xjf2")

[sub_resource type="AtlasTexture" id="AtlasTexture_qikwo"]
atlas = ExtResource("1_dd30v")
region = Rect2(151, 72, 181, 52)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oa572"]
texture = SubResource("AtlasTexture_qikwo")

[sub_resource type="AtlasTexture" id="AtlasTexture_2uqyh"]
atlas = ExtResource("3_0rsgw")
region = Rect2(151, 72, 181, 52)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qcuxu"]
texture = SubResource("AtlasTexture_2uqyh")

[sub_resource type="AtlasTexture" id="AtlasTexture_sjauf"]
atlas = ExtResource("3_0rsgw")
region = Rect2(151, 72, 181, 52)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3e3f2"]
texture = SubResource("AtlasTexture_sjauf")

[sub_resource type="AtlasTexture" id="AtlasTexture_3em36"]
atlas = ExtResource("1_dd30v")
region = Rect2(151, 72, 181, 52)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_p6g33"]
texture = SubResource("AtlasTexture_3em36")

[sub_resource type="AtlasTexture" id="AtlasTexture_b3e52"]
atlas = ExtResource("3_0rsgw")
region = Rect2(151, 72, 181, 52)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i1cgp"]
texture = SubResource("AtlasTexture_b3e52")

[sub_resource type="AtlasTexture" id="AtlasTexture_t384a"]
atlas = ExtResource("3_0rsgw")
region = Rect2(151, 72, 181, 52)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_abkjs"]
texture = SubResource("AtlasTexture_t384a")

[sub_resource type="AtlasTexture" id="AtlasTexture_4iedb"]
atlas = ExtResource("1_dd30v")
region = Rect2(151, 72, 181, 52)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ky3w2"]
texture = SubResource("AtlasTexture_4iedb")

[sub_resource type="AtlasTexture" id="AtlasTexture_tfb6x"]
atlas = ExtResource("3_0rsgw")
region = Rect2(151, 72, 181, 52)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3jbxp"]
texture = SubResource("AtlasTexture_tfb6x")

[sub_resource type="AtlasTexture" id="AtlasTexture_8i6iu"]
atlas = ExtResource("3_0rsgw")
region = Rect2(151, 72, 181, 52)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sojfp"]
texture = SubResource("AtlasTexture_8i6iu")

[sub_resource type="AtlasTexture" id="AtlasTexture_rd3vm"]
atlas = ExtResource("1_dd30v")
region = Rect2(151, 72, 181, 52)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_werol"]
texture = SubResource("AtlasTexture_rd3vm")

[sub_resource type="AtlasTexture" id="AtlasTexture_picf5"]
atlas = ExtResource("6_tfa6f")
region = Rect2(25, 109, 450, 282)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3o4f"]
atlas = ExtResource("6_tfa6f")
region = Rect2(261, 417, 181, 51)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_01gnk"]
texture = SubResource("AtlasTexture_t3o4f")

[sub_resource type="AtlasTexture" id="AtlasTexture_wl5a7"]
atlas = ExtResource("6_tfa6f")
region = Rect2(261, 417, 181, 51)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0chgy"]
texture = SubResource("AtlasTexture_wl5a7")

[sub_resource type="AtlasTexture" id="AtlasTexture_f85hw"]
atlas = ExtResource("6_tfa6f")
region = Rect2(42, 417, 180, 51)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4umla"]
texture = SubResource("AtlasTexture_f85hw")

[sub_resource type="AtlasTexture" id="AtlasTexture_fftda"]
atlas = ExtResource("5_hctmh")
region = Rect2(25, 37, 450, 283)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ipqy"]
atlas = ExtResource("5_hctmh")
region = Rect2(279, 428, 181, 51)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_otmx7"]
texture = SubResource("AtlasTexture_1ipqy")

[sub_resource type="AtlasTexture" id="AtlasTexture_cjajv"]
atlas = ExtResource("5_hctmh")
region = Rect2(279, 428, 181, 51)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yupvq"]
texture = SubResource("AtlasTexture_cjajv")

[sub_resource type="AtlasTexture" id="AtlasTexture_qcr3x"]
atlas = ExtResource("5_hctmh")
region = Rect2(279, 329, 181, 51)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6xt5q"]
texture = SubResource("AtlasTexture_qcr3x")

[node name="Quiz" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_trnum")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 152.0
offset_top = -259.0
offset_right = -76.0
offset_bottom = 293.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_x527l")

[node name="result" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 1084.0
offset_top = 413.0
offset_right = 1279.0
offset_bottom = 495.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 41
text = "wdkwbdwdw"

[node name="Label" type="Label" parent="."]
texture_filter = 2
layout_mode = 0
offset_left = 386.0
offset_top = 176.0
offset_right = 2172.0
offset_bottom = 436.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 81
text = "wdwdw"
metadata/_edit_lock_ = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 358.0
offset_top = 490.0
offset_right = 2133.0
offset_bottom = 947.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_l74fb")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 31

[node name="Option1" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
texture_filter = 2
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 71
theme_override_styles/hover = SubResource("StyleBoxTexture_bghpr")
theme_override_styles/pressed = SubResource("StyleBoxTexture_xxorb")
theme_override_styles/normal = SubResource("StyleBoxTexture_oa572")

[node name="Choices1" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/Option1"]
layout_mode = 2
offset_left = -29.0
offset_top = 62.0
offset_right = 679.0
offset_bottom = 220.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 66
text = "wdwdwdwwd"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="Option2" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
texture_filter = 2
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/hover = SubResource("StyleBoxTexture_qcuxu")
theme_override_styles/pressed = SubResource("StyleBoxTexture_3e3f2")
theme_override_styles/normal = SubResource("StyleBoxTexture_p6g33")

[node name="Choices2" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/Option2"]
layout_mode = 2
offset_left = -43.0
offset_top = 61.0
offset_right = 681.0
offset_bottom = 172.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 66
text = "wdwdwdwwd"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 31

[node name="Option3" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
texture_filter = 2
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/hover = SubResource("StyleBoxTexture_i1cgp")
theme_override_styles/pressed = SubResource("StyleBoxTexture_abkjs")
theme_override_styles/normal = SubResource("StyleBoxTexture_ky3w2")

[node name="Choices3" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2/Option3"]
layout_mode = 2
offset_left = -25.0
offset_top = 69.0
offset_right = 670.0
offset_bottom = 180.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 66
text = "wdwdwdwwd"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="Option4" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
texture_filter = 2
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/hover = SubResource("StyleBoxTexture_3jbxp")
theme_override_styles/pressed = SubResource("StyleBoxTexture_sojfp")
theme_override_styles/normal = SubResource("StyleBoxTexture_werol")

[node name="Choices4" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2/Option4"]
layout_mode = 2
offset_left = -34.0
offset_top = 65.0
offset_right = 672.0
offset_bottom = 176.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 66
text = "wdwdwdwwd"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="tryagaintexture" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
z_index = 1
texture_filter = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 254.0
offset_top = 83.0
offset_right = -178.0
offset_bottom = -63.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_picf5")

[node name="TryAgain" type="Button" parent="."]
unique_name_in_owner = true
visible = false
z_index = 1
texture_filter = 2
layout_mode = 0
offset_left = 988.0
offset_top = 842.0
offset_right = 1474.0
offset_bottom = 990.0
theme_override_styles/hover = SubResource("StyleBoxTexture_01gnk")
theme_override_styles/pressed = SubResource("StyleBoxTexture_0chgy")
theme_override_styles/normal = SubResource("StyleBoxTexture_4umla")

[node name="Complete" type="TextureRect" parent="."]
z_index = 2
texture_filter = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 260.0
offset_top = 86.0
offset_right = -184.0
offset_bottom = -47.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_fftda")

[node name="Exit" type="Button" parent="."]
z_index = 2
layout_mode = 0
offset_left = 968.0
offset_top = 821.0
offset_right = 1519.0
offset_bottom = 991.0
theme_override_styles/hover = SubResource("StyleBoxTexture_otmx7")
theme_override_styles/pressed = SubResource("StyleBoxTexture_yupvq")
theme_override_styles/normal = SubResource("StyleBoxTexture_6xt5q")

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Option1" to="." method="_on_option_1_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Option2" to="." method="_on_option_2_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer2/Option3" to="." method="_on_option_3_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer2/Option4" to="." method="_on_option_4_pressed"]
[connection signal="pressed" from="TryAgain" to="." method="_on_try_again_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
